<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:adjustViewBounds="true"
            android:background="@color/splash_bg_color"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/header_toolbar" />

        <ImageView
            android:id="@+id/btn_home"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_arrow_back_yellow" />

        <TextView
            android:id="@+id/mFood_title"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/food_searchRestaurant"
            android:textAllCaps="true"
             android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/food_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="4dp">

        <EditText
            android:id="@+id/searchRestoran_searchQuery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orangemuda"
            android:drawableLeft="@drawable/ic_action_search"
            android:drawablePadding="8dp"
            android:hint="@string/food_search"
            android:padding="4dp"
            android:singleLine="true" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/searchRestoran_requirement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/food_minimum3Chars"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRestoran_searchResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/searchRestoran_noResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/food_tryAnotherSearchTerm" />
        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/searchRestoran_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</LinearLayout>