<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_food_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueSoft"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/foodMenu_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:adjustViewBounds="true"
            android:background="@color/splash_bg_color"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/header_toolbar" />

        <ImageView
            android:id="@+id/btn_home"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_arrow_back_yellow" />

        <TextView
            android:id="@+id/resto_title"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/home_mFood"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <ScrollView
        android:layout_above="@+id/foodMenu_bottom"
        android:layout_below="@+id/foodMenu_header"
        android:id="@+id/foodMenu_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/food_img"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_alignBaseline="@+id/food_img"
                    android:alpha="0.7"
                    android:background="@drawable/gradient_background" />

                <TextView
                    android:id="@+id/foodMenu_closed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/food_closed"
                    android:textSize="12sp"
                    android:padding="4dp"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/foodMenu_mitra"
                    android:layout_marginTop="106dp"
                    android:background="@android:color/holo_red_dark"/>

                <TextView
                    android:id="@+id/foodMenu_mitra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/food_partner"
                    android:textSize="12sp"
                    android:padding="4dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="106dp"
                    android:background="@android:color/holo_green_dark"/>

                <TextView
                    android:id="@+id/food_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="130dp"
                    android:text="Jalan Soekarno Hatta No. 30, Malang"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/food_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/food_address"
                    android:layout_marginLeft="15dp"
                    android:text="2.1 KM | OPEN 12.00 - 21.00"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:padding="8dp"
                    android:text="@string/food_menu"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/blue" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/menu_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:nestedScrollingEnabled="false">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/foodMenu_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/cost_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_mfood_cost" />

        <TextView
            android:id="@+id/qty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/cost_icon"
            android:text="2"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <View
            android:id="@+id/cost_line"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/qty_text"
            android:background="@color/blue" />

        <TextView
            android:id="@+id/estimated_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/cost_line"
            android:text="@string/food_estimated"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/cost_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/estimated_text"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/cost_line"
            android:text="Rp. 23500"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/mfood_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_arrow" />

    </RelativeLayout>



</RelativeLayout>
